1998-05-06  Laurent Pautet  <pautet@scapin.enst.fr>

	* 5wgtplsp.adb: Use C_Recv and C_Send instead of C_Read and
	C_Write. Fix problem of external names.

	* s-ganobl.adb, s-ganobl.ads, s-gartcp.adb: Switch every
 	occurrence of 'Read' and 'Write' into 'Recv' and 'Send.

	* s-garthi.ads: Reformat C_Recv spec.

1998-05-04  Laurent Pautet  <pautet@scapin.enst.fr>

	* 5wgtplsp.adb: C_Read and C_Write are exported as "read" and
	"write". In fact, they call C_Recv and C_Send with a fourth arg
	equal to 0. This way, we don't have to change the code in s-gartcp.

1998-04-29  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: Fix a glitch concerning target
 	inlining.

1998-04-29  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.ads: Define Raise_Program_Error_For_E_4_18 which will
	be called by GNAT if conditions defined in E.4(18) are not met
	when using a RACW.

	* s-parint.adb: Likewise.

1998-04-24  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-ganobl.adb: (Asynchronous.Read) When Nbytes = 0, use C_Select
	to check whether there is something to read.

1998-04-24  Samuel Tardieu  <sam@inf.enst.fr>

	* 5pgtplsp.ads: Use the same file as SunOS but do not use Poll.

1998-04-22  Samuel Tardieu  <sam@inf.enst.fr>

	* 5pgtplsp.ads: Change casing for imported WSAStartup.

	* 5wgtplsp.ads: Likewise.

1998-04-20  Samuel Tardieu  <sam@inf.enst.fr>

	* s-ganobl.adb: Get Use_Poll from s-gtplsp.ads instead of
	s-garthi.ads.

	* s-garthi.ads: Move Use_Poll from here to s-gtplsp.ads when the
	platform uses the non-blocking alternative.

	* 5?gtplsp.ads: Define Use_Poll when needed.

	* 5wgtplsp.ads: Add a pragma Elaborate_Body to force body
	elaboration.

	* 5wgtplsp.adb: Windows NT specific package body.

	* Makefile.am (s-gtplsp.o): Specific trick needed to compile under 
	Windows NT.

1998-04-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* 5lgarthi.ads, 5wgarthi.ads: Add Select sys call. Add a constant