@@ -1,3 +1,10 @@
+1998-05-11  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* s-parint.ads, s-parint.adb: Move s-painst into s-parint to
+	get a fake PCS in gnat.
+
+	* Makefile.am, Makefile.in: Remove s-painst dependencies.
+
 1998-05-06  Laurent Pautet  <pautet@scapin.enst.fr>
 
 	* 5wgtplsp.adb: Use C_Recv and C_Send instead of C_Read and
